@@ -16,6 +16,8 @@
 
 package com.android.server.healthconnect.storage.datatypehelpers.aggregation;
 
+import static com.android.server.healthconnect.storage.datatypehelpers.aggregation.PriorityAggregationTestDataFactory.createSessionData;
+
 import static com.google.common.truth.Truth.assertThat;
 
 import static org.mockito.Mockito.doReturn;
@@ -34,7 +36,7 @@ import org.mockito.MockitoAnnotations;
 import java.util.Collections;
 import java.util.List;
 
-public class PriorityAggregationTest {
+public class SessionPriorityAggregationTest {
     @Mock Cursor mCursor;
 
     PriorityRecordsAggregator mOneGroupAggregator;
@@ -48,12 +50,16 @@ public class PriorityAggregationTest {
         mOneGroupAggregator =
                 Mockito.spy(
                         new PriorityRecordsAggregator(
-                                List.of(10L, 20L), List.of(1L, 2L), 0, mParams));
+                                List.of(10L, 20L), Collections.emptyList(), 0, mParams, false));
 
         mMultiGroupAggregator =
                 Mockito.spy(
                         new PriorityRecordsAggregator(
-                                List.of(10L, 20L, 30L, 40L), List.of(1L, 2L, 3L), 0, mParams));
+                                List.of(10L, 20L, 30L, 40L),
+                                Collections.emptyList(),
+                                0,
+                                mParams,
+                                false));
     }
 
     @Test
@@ -113,6 +119,18 @@ public class PriorityAggregationTest {
     }
 
     @Test
+    public void testOneSession_emptyBucketResultIsNull() {
+        doReturn(createSessionData(20, 35, 1, List.of(20L, 24L, 28L), List.of(22L, 26L, 34L)))
+                .when(mMultiGroupAggregator)
+                .readNewData(mCursor);
+        when(mCursor.moveToNext()).thenReturn(true, false);
+        mMultiGroupAggregator.calculateAggregation(mCursor);
+        assertThat(mMultiGroupAggregator.getResultForGroup(0)).isNull(); // Group 10-20
+        assertThat(mMultiGroupAggregator.getResultForGroup(1)).isEqualTo(4.0); // Group 20-30
+        assertThat(mMultiGroupAggregator.getResultForGroup(2)).isEqualTo(1.0); // Group 30-40
+    }
+
+    @Test
     public void testTwoSessions_noOverlaps() {
         doReturn(createSessionData(5, 12, 1), createSessionData(15, 25, 2))
                 .when(mOneGroupAggregator)
@@ -126,7 +144,7 @@ public class PriorityAggregationTest {
     public void testTwoSessions_excludeIntervalInTheOverlap_ignoredAsLowerPriority() {
         doReturn(
                         createSessionData(5, 18, 1),
-                        createSessionData(12, 25, 2, List.of(13L), List.of(16L)))
+                        createSessionData(12, 25, 0, List.of(13L), List.of(16L)))
                 .when(mOneGroupAggregator)
                 .readNewData(mCursor);
         when(mCursor.moveToNext()).thenReturn(true, true, false);
@@ -138,7 +156,7 @@ public class PriorityAggregationTest {
     public void testTwoSessions_excludeIntervalInTheOverlap_accountedAsHigherPriority() {
         doReturn(
                         createSessionData(5, 18, 2),
-                        createSessionData(12, 25, 1, List.of(13L), List.of(16L)))
+                        createSessionData(12, 25, 3, List.of(13L), List.of(16L)))
                 .when(mOneGroupAggregator)
                 .readNewData(mCursor);
         when(mCursor.moveToNext()).thenReturn(true, true, false);
@@ -149,8 +167,8 @@ public class PriorityAggregationTest {
     @Test
     public void testTwoInternalSessions_excludeIntervalInTheOverlap_accountedAsHigherPriority() {
         doReturn(
-                        createSessionData(12, 16, 2),
-                        createSessionData(14, 18, 1, List.of(14L), List.of(16L)))
+                        createSessionData(12, 16, 1),
+                        createSessionData(14, 18, 2, List.of(14L), List.of(16L)))
                 .when(mOneGroupAggregator)
                 .readNewData(mCursor);
         when(mCursor.moveToNext()).thenReturn(true, true, false);
@@ -161,9 +179,9 @@ public class PriorityAggregationTest {
     @Test
     public void testTwoSession_severalExcludeIntervalsInMultiGroup() {
         doReturn(
-                        createSessionData(10, 29, 1),
+                        createSessionData(10, 29, 2),
                         createSessionData(
-                                15, 35, 2, List.of(18L, 24L, 28L), List.of(22L, 26L, 34L)))
+                                15, 35, 1, List.of(18L, 24L, 28L), List.of(22L, 26L, 34L)))
                 .when(mMultiGroupAggregator)
                 .readNewData(mCursor);
         when(mCursor.moveToNext()).thenReturn(true, true, false);
@@ -186,21 +204,5 @@ public class PriorityAggregationTest {
         assertThat(mMultiGroupAggregator.getResultForGroup(0)).isEqualTo(5.0);
         assertThat(mMultiGroupAggregator.getResultForGroup(1)).isEqualTo(2.0 + 3.0 + 1.0);
         assertThat(mMultiGroupAggregator.getResultForGroup(2)).isEqualTo(5.0);
-    }
-
-    private AggregationRecordData createSessionData(
-            int startTime,
-            int endTime,
-            int priority,
-            List<Long> excludeStarts,
-            List<Long> excludeEnds) {
-        return new SessionDurationAggregationData("startTime", "endTime")
-                .setExcludeIntervals(excludeStarts, excludeEnds)
-                .setData(startTime, endTime, priority, 0);
-    }
-
-    private AggregationRecordData createSessionData(int startTime, int endTime, int priority) {
-        return createSessionData(
-                startTime, endTime, priority, Collections.emptyList(), Collections.emptyList());
     }
 }
